css/main.css
/* ... */
input[type=range]::-moz-range-track {
	width: 100%;
	height: 5px;
	background: #ddd;
	border: none;
	border-radius: 3px;
}

input[type=range]::-moz-range-thumb {
	border: none;
	height: 12px;
	width: 12px;
	border-radius: 50%;
	background: #555;
}

/* IE (10+) a Edge */
input[type=range]::-ms-track {
	width: 100%;
	height: 5px;
	background: transparent;
	border-color: transparent;
	border-width: 6px 0;
	color: transparent;
}

input[type=range]::-ms-fill-lower,
input[type=range]::-ms-fill-upper {
	background: #ddd;
	border-radius: 10px;
}

input[type=range]::-ms-thumb {
	border: none;
	height: 12px;
	width: 12px;
	border-radius: 50%;
	background: #555;
	margin-top: 0px!important;
}


/* ================= Piano roll ================= */

.pianoroll.pianoroll {
	display: none;
}
.cinema .pianoroll {
	display: flex;
	flex-direction: row;
}
.pianoroll>div {
	position: relative;
}
/* columns */
.pianoroll>div[data-note*="F"],
.pianoroll>div[data-note*="G"],
.pianoroll>div[data-note*="A"],
.pianoroll>div[data-note*="B"] {
	flex: 72156;
}
.pianoroll>div[data-note*="C"],
.pianoroll>div[data-note*="D"],
.pianoroll>div[data-note*="E"] {
	flex: 74606;
}
.pianoroll>div[data-note*="F#"],
.pianoroll>div[data-note*="G#"],
.pianoroll>div[data-note*="A#"] {
	flex: 72520;
}
.pianoroll>div[data-note*="C#"],
.pianoroll>div[data-note*="D#"] {
	flex: 74235;
}
.pianoroll>div:first-child {
	flex: 108416;
}
.pianoroll>div:last-child {
	flex: 124096;
}

/* flying rectangle */
.pianoroll>div>div {
	width: 100%;
	min-width: 1px;
	background-color: hsla(var(--hue), 70%, 50%, 0.9);
	position: absolute;
	bottom: 0;
	height: 100vh;
	border-radius: 3px;
	box-shadow:
		0 0 5px hsla(var(--hue), 70%, 50%, 0.9),
		0 0 15px hsla(var(--hue), 70%, 50%, 0.8),
		0 0 25px hsla(var(--hue), 70%, 50%, 0.7);
}
.pianoroll>div>div.pressed {
	animation: grow-up 5s linear 0s 1 normal none running;
}
.pianoroll>div>div.released {
	bottom: 100vh;
	animation:
		grow-up 5s linear 0s 1 normal none paused,
		rise-up 5s linear 0s 1 normal none running;
}

@keyframes grow-up {
	0% { height: 0vh; }
	100% { height: 100vh; }
}

@keyframes rise-up {
	0% { bottom: 0vh; }
	100% { bottom: 100vh; }
}




/* mobile devices  */

@media screen and (max-height: 500px), (max-width: 500px) {
	html {
		font-size: 100%;
	}
	body {
		margin-bottom: 0;
	}
	.bar:first-child {
		margin-top: 0;
		padding-top: 0;
		padding-bottom: 1rem;
	}
	.bar:last-child {
		margin-bottom: 0;
		padding-bottom: 0;
		padding-top: 1rem;
	}
	.keyboard {
		height: 12rem;
	}
	.staffs {
		font-size: 2.5em;
	}
	h1#logo {
		font-size: 1.5em;
	}
	.bar button,
	.bar select,
	.bar label {
		padding: 0.1rem;	
		min-width: 54px;
	}
	.bar .mdi {
		font-size: 14px;
		line-height: 18px;
	}
	.bar,
	header.bar,
	footer.bar {
		/* display: none; */
		height: auto;
		padding: 0;
	}
	.keyboard + .bar {
		padding-bottom: 2rem;
	}
}

@media(hover: none) {
	[data-tippy-root] {
		display: none;
	}
}

